app/assets/stylesheets/views/completed-transaction.scss
.transaction-done {
  article {
    form {
      @include core-19;
      float: left;
      width: 95%;

      input {
        margin-right: 0.25em;
        vertical-align: 2px;
        background: #f8f8f8;
        }

      label {
        float: none;
        width: auto;
        text-align: left;
      }

      textarea {
        display:block;
        @include core-19;
        margin: 0 0 1em 0;
        background-color: #f8f8f8;
        border: 1px inset #bfc1c3;
        padding: 0.25em 0 0.25em 0.4em;
        width:95%;
      }
    }
  }
}

